Update Gradle to 7.6 from 7.3
See https://github.com/apache/jmeter/pull/5763